--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,8 @@ services:
     image: 'docker.io/bitnami/kafka:2-debian-10'
     command: /bin/sh -c "
       sleep 20 &&
-      kafka-topics.sh --bootstrap-server kafka:9092 --create --topic payloads.wasp-payload-parser-template --partitions 1 --replication-factor 1 &&
-      kafka-topics.sh --bootstrap-server kafka:9092 --create --topic readings --partitions 1 --replication-factor 1 &&
-      kafka-topics.sh --bootstrap-server kafka:9092 --create --topic events --partitions 1 --replication-factor 1"
+      kafka-topics.sh --bootstrap-server kafka:9092 --create --topic payloads.detiPower --partitions 1 --replication-factor 1 &&
+      kafka-topics.sh --bootstrap-server kafka:9092 --create --topic readings --partitions 1 --replication-factor 1"
     depends_on:
       - zookeeper
       - kafka
