--- a/helm/wasp-deti-power/Chart.yaml
+++ b/helm/wasp-deti-power/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-name: wasp-payload-parser-template
-appVersion: '0.0.4'
-description: A Helm chart for wasp-payload-parser-template
-version: '0.0.4'
+name: wasp-deti-power
+appVersion: '0.0.5'
+description: A Helm chart for wasp-deti-power
+version: '0.0.5'
 type: application
 maintainers:
   - name: digicatapult
