--- a/helm/wasp-deti-power/ci/ct-values.yaml
+++ b/helm/wasp-deti-power/ci/ct-values.yaml
@@ -28,6 +28,6 @@ waspthingmock:
       }
     }
 image:
-  repository: 'wasp-payload-parser-template'
+  repository: 'wasp-deti-power'
   tag: 'latest'
   PullPolicy: Never
