--- a/helm/wasp-deti-power/templates/configmap.yaml
+++ b/helm/wasp-deti-power/templates/configmap.yaml
@@ -1,17 +1,16 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "wasp-payload-parser-template.fullname" . }}-config
+  name: {{ include "wasp-deti-power.fullname" . }}-config
   labels:
-    {{- include "wasp-payload-parser-template.labels" . | nindent 4 }}
+    {{- include "wasp-deti-power.labels" . | nindent 4 }}
 data:
   port: {{ .Values.config.port | quote }}
   waspSensor: {{ .Values.config.waspSensorType }}
   logLevel: {{ .Values.config.logLevel }}
   kafkaLogLevel: {{ .Values.config.kafkajsLogLevel }}
-  kafkaBrokers: {{ include "wasp-payload-parser-template.kafka.brokers" . }}
+  kafkaBrokers: {{ include "wasp-deti-power.kafka.brokers" . }}
   kafkaReadingsTopic: {{ .Values.config.kafkaReadingsTopic }}
-  kafkaEventsTopic: {{ .Values.config.kafkaEventsTopic }}
   kafkaPayloadRoutingPrefix: {{ .Values.config.kafkaPayloadRoutingPrefix }}
   kafkaPayloadsPartitions: {{ .Values.config.kafkaPayloadsPartitions | quote }}
   kafkaPayloadsReplicationFactor: {{ .Values.config.kafkaPayloadsReplicationFactor | quote }}
