--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@digicatapult/wasp-payload-parser-template",
-  "version": "0.0.4",
-  "description": "Service for WASP",
+  "name": "@digicatapult/wasp-deti-power",
+  "version": "0.0.5",
+  "description": "Payload processing service for WASP",
   "main": "app/index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha --config ./test/mocharc.js ./test",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/digicatapult/wasp-payload-parser-template.git"
+    "url": "git+https://github.com/digicatapult/wasp-deti-power.git"
   },
   "engines": {
     "node": ">=14.16.0"
@@ -24,9 +24,9 @@
   "author": "Digital Catapult",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/digicatapult/wasp-payload-parser-template/issues"
+    "url": "https://github.com/digicatapult/wasp-deti-power/issues"
   },
-  "homepage": "https://github.com/digicatapult/wasp-payload-parser-template#readme",
+  "homepage": "https://github.com/digicatapult/wasp-deti-power#readme",
   "dependencies": {
     "@digicatapult/wasp-payload-processor": "^1.0.0",
     "dotenv": "^8.2.0",
@@ -41,7 +41,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "kafkajs": "^1.15.0",
     "mocha": "^8.3.0",
-    "moment": "^2.29.1",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
     "pino-colada": "^2.1.0",
