--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,25 +147,58 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           buildkitd-flags: "--debug"
+      - name: Generate tags
+        id: generate-tags
+        env:
+          VERSION: ${{ needs.check-version.outputs.version }}
+          IS_NEW_VERSION: ${{ needs.check-version.outputs.is_new_version }}
+          IS_PRERELEASE: ${{ needs.check-version.outputs.is_prerelease }}
+        # if it's a new non prerelease version tag with hash, version latest-dev and latest
+        # if it's a new prerelease version tag with hash, version and latest-dev
+        # if it's a non new version tag with hash and latest-dev
+        run: |
+          if [ "$IS_NEW_VERSION" == "true" ]; then
+            echo "GHCR_VERSION_TAG=ghcr.io/${{ needs.preconditions.outputs.org_name }}/${{ needs.preconditions.outputs.repo_name }}:$VERSION" >> $GITHUB_OUTPUT
+            echo "DOCKERHUB_VERSION_TAG=${{ needs.preconditions.outputs.org_name }}/${{ needs.preconditions.outputs.repo_name }}:$VERSION" >> $GITHUB_OUTPUT
+            if [ "$IS_PRERELEASE" == "false" ]; then
+              echo "GHCR_LATEST_TAG=ghcr.io/${{ needs.preconditions.outputs.org_name }}/${{ needs.preconditions.outputs.repo_name }}:latest" >> $GITHUB_OUTPUT
+              echo "DOCKERHUB_LATEST_TAG=${{ needs.preconditions.outputs.org_name }}/${{ needs.preconditions.outputs.repo_name }}:latest" >> $GITHUB_OUTPUT
+            else
+              echo "GHCR_LATEST_TAG=" >> $GITHUB_OUTPUT
+              echo "DOCKERHUB_LATEST_TAG=" >> $GITHUB_OUTPUT
+            fi;
+          else
+            echo "GHCR_VERSION_TAG=" >> $GITHUB_OUTPUT
+            echo "GHCR_LATEST_TAG=" >> $GITHUB_OUTPUT
+            echo "DOCKERHUB_VERSION_TAG=" >> $GITHUB_OUTPUT
+            echo "DOCKERHUB_LATEST_TAG=" >> $GITHUB_OUTPUT
+          fi;
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: $GITHUB_ACTOR
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish multi-arch image
-        uses: docker/build-push-action@v3
+      - name: Login to Dockerhub Registry
+        uses: docker/login-action@v2
         with:
-          push: true
+          username: ${{ secrets.WASP_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.WASP_DOCKERHUB_TOKEN }}
+      - name: Build image
+        uses: docker/build-push-action@v4
+        with:
           builder: ${{ steps.buildx.outputs.name }}
           context: .
           file: ./Dockerfile
           platforms: linux/amd64, linux/arm64
-          secrets: |
-            github=${{ secrets.GITHUB_TOKEN }}
+          push: true
           tags: |
-            ghcr.io/${{ needs.preconditions.outputs.org_name }}/${{ needs.preconditions.outputs.repo_name }}:${{ needs.check-version.outputs.version }}
-            ghcr.io/${{ needs.preconditions.outputs.org_name }}/${{ needs.preconditions.outputs.repo_name }}:latest
+            ghcr.io/${{ needs.preconditions.outputs.org_name }}/${{ needs.preconditions.outputs.repo_name }}:${{ github.sha }}
+            ${{ steps.generate-tags.outputs.GHCR_VERSION_TAG }}
+            ${{ steps.generate-tags.outputs.GHCR_LATEST_TAG }}
+            ${{ needs.preconditions.outputs.org_name }}/${{ needs.preconditions.outputs.repo_name }}:${{ github.sha }}
+            ${{ steps.generate-tags.outputs.DOCKERHUB_VERSION_TAG }}
+            ${{ steps.generate-tags.outputs.DOCKERHUB_LATEST_TAG }}
           labels: |
             org.opencontainers.image.title=${{ needs.preconditions.outputs.repo_name }}
             org.opencontainers.image.description=${{ github.event.repository.description }}
